fix: adjust z-index values for navigation elements and enforce transform property for menu items

--- a/planapp/appstyle.css
+++ b/planapp/appstyle.css
@@ -550,7 +550,7 @@ body {
     transform: translate(-100vw);
   }
   .nav-container input[type="checkbox"]:checked ~ .menu-items {
-    transform: translate(0);
+    transform: translate(0) !important;
   }
 }
 @media screen and (max-width: 500px) {
@@ -670,7 +670,7 @@ nav.static {
   height: 32px;
   width: 32px;
   right: 20px;
-  z-index: 10;
+  z-index: 5;
   opacity: 0;
   cursor: pointer;
 }
@@ -681,7 +681,7 @@ nav.static {
   width: 32px;
   position: absolute;
   right: 20px;
-  z-index: 9;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -711,7 +711,6 @@ nav.static {
 
 .menu-items {
   position: fixed;
-  z-index: 8;
   padding-top: 20vh;
   background-color: var(--color-light-grey);
   height: 100vh;
@@ -782,6 +781,7 @@ nav.static {
 .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
   transform: rotate(-45deg);
 }
+
 h1 {
   font-family: 'Julius Sans One', sans-serif;
   font-size: xx-large;
